@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-02-25T00:27:39Z",
+  "timestamp" : "2024-02-25T08:02:28Z",
   "count_outdated" : 3839,
   "uniques_outdated" : 1752,
-  "count" : 3961,
-  "uniques" : 1832,
+  "count" : 3962,
+  "uniques" : 1833,
   "clones" : [
     {
       "timestamp": "2024-02-11T00:00:00Z",
@@ -94,6 +94,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-02-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
