@@ -1,5 +1,5 @@
 {
-  "count": 122,
+  "count": 123,
   "uniques": 63,
   "clones": [
     {
@@ -51,6 +51,11 @@
       "timestamp": "2024-02-24T00:00:00Z",
       "count": 4,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-02-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
